--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Weather API by geolocation",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -23,7 +23,9 @@
   "homepage": "https://github.com/s-ayers/weather#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-openapi": "^12.1.3",
+    "nodemon": "^3.0.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
