--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/s-ayers/weather#readme",
   "dependencies": {
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-openapi": "^12.1.3",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2",
+    "rotating-file-stream": "^3.1.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
   }
