--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "lint": "eslint .",
+    "fix-lint": "eslint . --fix",
     "test": "jest"
   },
   "repository": {
