--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,18 +1,18 @@
-name: Lint # name of the action (displayed in the github interface)
+name: Lint
 
-on: # event list
-  pull_request: # on a pull request to each of these branches
+on:
+  pull_request:
     branches:
       - main
 
-env: # environment variables (available in any part of the action)
+env:
   NODE_VERSION: 20
 
-jobs: # list of things to do
+jobs:
   linting:
-    name: Linting # job name (unique id)
-    runs-on: ubuntu-latest # on which machine to run
-    steps: # list of steps
+    name: Linting
+    runs-on: ubuntu-latest
+    steps:
       - name: Install NodeJS
         uses: actions/setup-node@v2
         with:
