--- a/config.json
+++ b/config.json
@@ -1,3 +1,4 @@
 {
-  "OPEN_WEATHER_API_KEY": "197f5c94c481e6dbbb76c19819d808ea"
+  "OPEN_WEATHER_API_KEY": "197f5c94c481e6dbbb76c19819d808ea",
+  "port": 3001
 }
